<?xml version="1.0"?>
<package>
  <name>puma560_description</name>
  <version>0.0.0</version>
  <description>The puma560_description package</description>

  <maintainer email="xogns2079@gmail.com">ryu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
